erDiagram
  GAME ||--o{ CARD : has
  GAME ||--o{ HINT : has
  GAME ||--o{ SESSION : has
  HINT ||--o{ SESSION : "drives"
  ARTWORK ||--o{ CARD : "appears as"

  GAME {
    long id PK
    enum state "CREATING | READY | ARCHIVED"
    int max_score
    int play_count
    timestamp created_at
  }

  CARD {
    UUID id PK
    long game_id FK
    uuid artwork_id FK
    enum type "TEAM1 | TEAM2 | NEUTRAL | ASSASSIN"
    boolean is_spymaster_pick
  }

  HINT {
    UUID id PK
    long game_id FK
    varchar content
  }

  ARTWORK {
    uuid id PK
    text title
    text artist_display
    text date_display
    text medium_display
    text place_of_origin
    text dimensions
    text department_title
    int times_loaded
    int times_spymaster_pick
    int times_correct_guess
    int times_bad_guess
    timestamp first_used_at
    timestamp last_used_at
  }

  SESSION {
    UUID id PK
    long game_id FK
    UUID hint_id FK
    enum state "IN_PROGRESS | FINISHED"
    timestamp started_at
    timestamp finished_at
    int score
  }
